feat(core): add pre-commit hooks, commit lint, change folder structure
skip

skip

--- a/package.json
+++ b/package.json
@@ -8,22 +8,41 @@
 		"dev": "nuxt",
 		"build": "nuxt build",
 		"start": "nuxt start",
-		"generate": "nuxt generate"
+		"generate": "nuxt generate",
+		"release": "standard-version",
+		"commit": "commit",
+		"lint": ""
+	},
+	"husky": {
+		"hooks": {
+			"pre-commit": "yarn lint",
+			"commit-msg": "commitlint --env HUSKY_GIT_PARAMS"
+		}
 	},
 	"dependencies": {
-		"@nuxtjs/prismic": "^1.1.1",
+		"@nuxtjs/gtm": "^2.2.3",
+		"@nuxtjs/prismic": "1.1.1",
+		"consola": "^2.11.3",
 		"cross-env": "^5.2.0",
-		"gsap": "^2.0.2",
-		"nuxt": "^2.11.0",
-		"prismic-javascript": "^2.7.0",
+		"dotenv": "^8.2.0",
+		"gsap": "^3.2.6",
+		"lodash": "^4.17.15",
+		"nuxt": "^2.12.2",
+		"prismic-dom": "^2.2.3",
+		"prismic-javascript": "^2.7.1",
 		"prismic-vue": "^2.0.0",
 		"smoothscroll-polyfill": "^0.4.4",
-		"stylus": "^0.54.5",
+		"stylus": "^0.54.7",
 		"stylus-loader": "^3.0.2",
-		"vuex-persistedstate": "^3.0.0"
+		"vuex-persistedstate": "^3.0.1"
 	},
 	"devDependencies": {
+		"@commitlint/cli": "^8.3.5",
+		"@commitlint/config-conventional": "^8.3.4",
+		"@commitlint/prompt-cli": "^8.3.5",
 		"@nuxtjs/style-resources": "^1.0.0",
-		"nodemon": "^1.11.0"
+		"husky": "^4.2.5",
+		"nodemon": "^1.11.0",
+		"standard-version": "^7.1.0"
 	}
 }
