--- a/.gitignore
+++ b/.gitignore
@@ -1,11 +1,10 @@
-# Created by .ignore support plugin (hsz.mobi)
-### Node template
 # Logs
 logs
 *.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+.DS_STORE
 
 # Runtime data
 pids
@@ -69,7 +68,7 @@ typings/
 .nuxt
 
 # Nuxt generate
-# dist
+dist
 
 # vuepress build output
 .vuepress/dist
@@ -80,10 +79,5 @@ typings/
 # IDE
 .idea
 
-# dploy
-dploy.yaml
-
-#fonts
-# assets/fonts/
-
-.DS_Store
+# Local Netlify folder
+.netlify
