--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
 		"start": "nuxt start",
 		"generate": "nuxt generate",
 		"release": "standard-version",
-		"commit": "commit"
+		"a": "git add .",
+		"c": "commit",
+		"lint": ""
 	},
 	"husky": {
 		"hooks": {
