chore(core): add nuxt modules, libhr head module
Add Nuxt modules, modify env variables, modify nuxt config

skip

--- a/.env.example
+++ b/.env.example
@@ -1,10 +1,26 @@
-# META
+# META ############################################################
+
+# SITE_LANG=
+# SITE_URL=
+SITE_NAME=
+# SITE_DESCRIPTION=
+# SITE_TITLE_FORMAT=
+
+# SITE_METAIMG_OG="/images/placeholder.jpg"
+# SITE_METAIMG_TW="/images/placeholder.jpg"
+
+# SITE_TWITTER_HANDLE=
+
+# SITE_BACKGROUND_COLOR=
+# SITE_ACCENT_COLOR=
 
 
-# CMS
+# CMS ############################################################
 
 API_ENDPOINT=
 
 
-# OPTIONS
+# SERVICES ############################################################
 
+# GTM_ID=
+# SENTRY_DSN=
