--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 	"scripts": {
 		"dev": "nuxt",
 		"build": "nuxt build",
+		"analyze": "nuxt build --analyze",
 		"start": "nuxt start",
 		"generate": "nuxt generate",
 		"standard": "standard-version",
@@ -23,8 +24,9 @@
 		}
 	},
 	"dependencies": {
-		"@nuxtjs/gtm": "^2.2.3",
+		"@nuxtjs/device": "^1.2.7",
 		"@nuxtjs/prismic": "1.1.1",
+		"@nuxtjs/sentry": "^4.0.2",
 		"consola": "^2.11.3",
 		"cross-env": "^5.2.0",
 		"dotenv": "^8.2.0",
@@ -34,15 +36,21 @@
 		"prismic-dom": "^2.2.3",
 		"prismic-javascript": "^2.7.1",
 		"prismic-vue": "^2.0.0",
-		"smoothscroll-polyfill": "^0.4.4",
 		"stylus": "^0.54.7",
 		"stylus-loader": "^3.0.2",
 		"vuex-persistedstate": "^3.0.1"
 	},
 	"devDependencies": {
+		"@aceforth/nuxt-netlify": "^1.0.0",
+		"@aceforth/nuxt-optimized-images": "^1.0.0",
 		"@commitlint/cli": "^8.3.5",
 		"@commitlint/config-conventional": "^8.3.4",
 		"@commitlint/prompt-cli": "^8.3.5",
+		"@nuxtjs/global-components": "^0.6.1",
+		"@nuxtjs/gtm": "^2.2.3",
+		"@nuxtjs/pwa": "^3.0.0-beta.20",
+		"@nuxtjs/robots": "^2.4.2",
+		"@nuxtjs/sitemap": "^2.2.1",
 		"@nuxtjs/style-resources": "^1.0.0",
 		"babel-eslint": "^10.1.0",
 		"eslint": "^6.8.0",
@@ -50,8 +58,13 @@
 		"eslint-plugin-nuxt": "^0.5.2",
 		"eslint-plugin-vue": "^6.2.2",
 		"husky": "^4.2.5",
+		"imagemin-gifsicle": "^7.0.0",
+		"imagemin-mozjpeg": "^8.0.0",
+		"imagemin-pngquant": "^8.0.0",
+		"imagemin-svgo": "^7.1.0",
 		"nodemon": "^1.11.0",
 		"prettier": "^2.0.5",
-		"standard-version": "^7.1.0"
+		"standard-version": "^7.1.0",
+		"webp-loader": "^0.6.0"
 	}
 }
