chore(config): modify setup files, make it work out of the box
skip

skip

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
 # META ############################################################
 
 # SITE_LANG=
-# SITE_URL=
+SITE_URL=
 SITE_NAME=
-# SITE_DESCRIPTION=
+SITE_DESCRIPTION=
 # SITE_TITLE_FORMAT=
 
 # SITE_METAIMG_OG="/images/placeholder.jpg"
