--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # META ############################################################
 
-# SITE_LANG=
+SITE_LANG=
 SITE_URL=
 SITE_NAME=
 SITE_DESCRIPTION=
