--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@commitlint/cli": "^8.3.5",
 		"@commitlint/config-conventional": "^8.3.4",
 		"@commitlint/prompt-cli": "^8.3.5",
+		"@nuxtjs/color-mode": "^1.0.0",
 		"@nuxtjs/global-components": "^0.6.1",
 		"@nuxtjs/gtm": "^2.2.3",
 		"@nuxtjs/robots": "^2.4.2",
@@ -65,6 +66,7 @@
 		"nodemon": "^1.11.0",
 		"prettier": "^2.0.5",
 		"standard-version": "^7.1.0",
+		"tailwindcss-dark-mode": "^1.1.4",
 		"webp-loader": "^0.6.0"
 	}
 }
