--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
 	"scripts": {
 		"dev": "nuxt",
 		"build": "nuxt build",
-		"analyze": "nuxt build --analyze",
 		"start": "nuxt start",
 		"generate": "nuxt generate",
-		"standard": "standard-version",
-		"release": "git push --follow-tags origin",
-		"a": "git add .",
-		"c": "commit",
-		"p": "git push origin",
+		"analyze": "nuxt build --analyze",
+		"release": "standard-version git push --follow-tags origin",
+		"commit": "git add . && commit",
+		"push": "git push origin",
 		"lint": "eslint --ext .js,.vue --ignore-path .gitignore --ignore-pattern src/modules/*/*.plugin.js --ignore-pattern plop-templates/component.vue --ignore-pattern plop-templates/page.vue ."
 	},
 	"husky": {
